--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=OneWire No Resistor
-version=1.1
+version=1.1.0
 author=josh <onewirenoresistor@joshreply.com>
-maintainer=josh <onewirenoresistor@joshreply.com>
+maintainer=jLibor Gabaj <libor.gabaj@gmail.com>
 sentence=A library that replaces OneWire and makes it possible to connect 1-wire devices without a pull-up resistor
-paragraph=This is a very slight update to the popular OneWire library. Be sure to read the attached atricle for more info.
+paragraph=This is a very slight update to the popular OneWire library. Be sure to read the attached article for more info at "http://wp.josh.com/2014/06/23/no-external-pull-up-needed-for-ds18b20-temp-sensor/".
 category=Communication
-url=http://wp.josh.com/2014/06/23/no-external-pull-up-needed-for-ds18b20-temp-sensor/
+url=https://github.com/mrkaleArduinoLib/OneWireNoResistor.git
 architectures=avr
